p- fixed trash icon z-index

--- a/view/src/css/app.styl
+++ b/view/src/css/app.styl
@@ -15,6 +15,11 @@
 
 .vjs-tree {
   word-break: break-all;
+  font-size: 10px !important
+}
+
+.del-btn {
+  z-index: 20 !important
 }
 
 .fa-p:before {
